--- a/StqaLab1.ipynb
+++ b/StqaLab1.ipynb
@@ -3,9 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPmR7VGqpOLj60MFmvrJM+D",
+      "mount_file_id": "1fgS0WBopE28o4MTamuP3zMQzepWCQQ6C",
+      "authorship_tag": "ABX9TyNgtqqlAGRQQZkMVMMu8GbR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -100,10 +100,23 @@
         "    run_test(1, 7, 80, \"Eligible\") # Nominal Case"
       ],
       "metadata": {
-        "id": "DIQumqQoWmQi"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DIQumqQoWmQi",
+        "outputId": "f53f2ec6-25eb-476c-9680-18f841f2d89f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--- Starting Lab Tests ---\n",
+            "Case 1: Inputs(7, 80) -> Actual: Eligible | Expected: Eligible\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -180,10 +193,23 @@
         "    run_test(1, 0, 20, \"Access Denied\") # Nominal Case"
       ],
       "metadata": {
-        "id": "jwrEZyLERiAy"
+        "id": "jwrEZyLERiAy",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6d45829e-3145-45f1-c057-5fae7d808500"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--- Starting Lab Tests ---\n",
+            "Case 1: Inputs(0, 20) -> Actual: Access Denied | Expected: Access Denied\n"
+          ]
+        }
+      ]
     }
   ]
 }
